[package]
name = "toq"
version = "0.1.0"
description = "Data and relationships manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-context-menu = "0.5.0"
indradb-lib = { version = "4.0", features = ["rocksdb-datastore"] }
tokio = "1.28.1"
async-graphql = "5.0.8"
async-graphql-warp = "5.0.8"
warp = "0.3.5"
dotenv = "0.15.0"
async-openai = "0.10.3"
cocoa = "0.24.1"
neo4rs = "0.6.0"
arangors = "0.5.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
