[package]
name = "toq"
version = "0.1.0"
description = "Data and relationships manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.59"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
indradb-lib = { version = "4.0", features = ["rocksdb-datastore"] }
tokio = "1.28.1"
async-graphql = "7.0.3"
async-graphql-warp = "7.0.3"
warp = "0.3.5"
dotenv = "0.15.0"
async-openai = "0.20.0"
cocoa = "0.25.0"
neo4rs = "0.7.1"
arangors = "0.5.4"
tauri-plugin-dialog = "2.0.0-beta.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
